crates/oxc_css/tests/error/scss/at-rule/forward/hide-empty-variable.snap
---
source: crates/oxc_css/tests/error.rs
---
error: unknown token
  ┌─ hide-empty-variable.scss:1:19
  │
1 │ @forward "a" hide $;
  │                   ^


